# markov-chan

./: CMakeLists.txt  LICENSE  README.md  main.cpp
example-onegin/: source.txt  source.txt.mchan
include/: Chain.h  Job.h  Learn.h  Run.h  State.h
src/: Chain.cpp  Learn.cpp  Run.cpp  State.cpp  main.cpp
